--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -7,6 +7,9 @@ repositories {
 }
 
 dependencies {
+    /** Import Velocity and its annotation processor */
     compileOnly 'com.velocitypowered:velocity-api:3.0.1'
     annotationProcessor 'com.velocitypowered:velocity-api:3.0.1'
+    /** Import CLOUD for commands */
+    implementation 'cloud.commandframework:cloud-velocity:1.6.1'
 }
